# integrador-api/src/config/swagger/swagger-response/vehiculoDatosSwagger.yaml
@@ -1,3 +1,48 @@
+components:
+  schemas:
+    VehiculoDatos:
+      type: object
+      properties:
+        _id:
+          type: string
+        chasis:
+          type: string
+        id_cliente:
+          type: string
+        id_modelo:
+          type: string
+        id_color:
+          type: string
+        anio:
+          type: integer
+      required:
+        - _id
+        - chasis
+        - id_cliente
+        - id_modelo
+        - id_color
+        - anio
+
+    VehiculoDatosInput:
+      type: object
+      properties:
+        chasis:
+          type: string
+        id_cliente:
+          type: string
+        id_modelo:
+          type: string
+        id_color:
+          type: string
+        anio:
+          type: integer
+      required:
+        - chasis
+        - id_cliente
+        - id_modelo
+        - id_color
+        - anio
+
 paths:
   /api/vehiculodatos:
     get:
@@ -9,7 +54,7 @@ paths:
           name: search
           schema:
             type: string
-          description: Filtrar por chasis, cliente, modelo o color
+          description: Filtrar por chasis, cliente, modelo, color o año
       responses:
         '200':
           description: Lista de vehículos
@@ -36,6 +81,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/VehiculoDatos'
+
   /api/vehiculodatos/paginado:
     get:
       tags:
@@ -56,7 +102,7 @@ paths:
           name: search
           schema:
             type: string
-          description: Filtrar por chasis, cliente, modelo o color
+          description: Filtrar por chasis, cliente, modelo, color o año
       responses:
         '200':
           description: Resultado paginado de vehículos
@@ -75,6 +121,7 @@ paths:
                     type: integer
                   totalCount:
                     type: integer
+
   /api/vehiculodatos/{id}:
     parameters:
       - in: path
@@ -135,50 +182,3 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
-components:
-  schemas:
-    VehiculoDatos:
-      type: object
-      properties:
-        _id:
-          type: string
-        chasis:
-          type: string
-        id_cliente:
-          type: string
-        id_modelo:
-          type: string
-        id_color:
-          type: string
-      required:
-        - _id
-        - chasis
-        - id_cliente
-        - id_modelo
-        - id_color
-
-    VehiculoDatosInput:
-      type: object
-      properties:
-        chasis:
-          type: string
-        id_cliente:
-          type: string
-        id_modelo:
-          type: string
-        id_color:
-          type: string
-      required:
-        - chasis
-        - id_cliente
-        - id_modelo
-        - id_color
-
-    Error:
-      type: object
-      properties:
-        message:
-          type: string
-      required:
-        - message
